changed font urls to see if it solves bug from LG not showing league spartan

--- a/themes/preforma-theme/static/css/_global-styles/main.css
+++ b/themes/preforma-theme/static/css/_global-styles/main.css
@@ -79,8 +79,8 @@ html {
 
 @font-face {
   font-family: 'League Spartan';
-  src: url("../../fonts/league-spartan/leaguespartan-bold.eot");
-  src: url("../../fonts/league-spartan/leaguespartan-bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/league-spartan/leaguespartan-bold.woff2") format("woff2"), url("../../fonts/league-spartan/leaguespartan-bold.woff") format("woff"), url("../../fonts/league-spartan/leaguespartan-bold.ttf") format("truetype"), url("../../fonts/league-spartan/leaguespartan-bold.svg#league_spartanbold") format("svg");
+  src: url("/fonts/league-spartan/leaguespartan-bold.eot");
+  src: url("/fonts/league-spartan/leaguespartan-bold.eot?#iefix") format("embedded-opentype"), url("/fonts/league-spartan/leaguespartan-bold.woff2") format("woff2"), url("/fonts/league-spartan/leaguespartan-bold.woff") format("woff"), url("/fonts/league-spartan/leaguespartan-bold.ttf") format("truetype"), url("/fonts/league-spartan/leaguespartan-bold.svg#league_spartanbold") format("svg");
   font-weight: bold;
   font-style: normal; }
 
